{
    "name": "InputActionsPlayer",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "8a7ba1fe-c625-413a-baa3-e45109aba024",
            "actions": [
                {
                    "name": "ChangeLine",
                    "type": "Value",
                    "id": "b6bc387d-4b8d-41a5-ae27-260d74c61715",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bcaa946d-6e65-4ae2-84c0-4ed043b5c21f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "ed216332-5431-4e94-8d35-0a1b1471c1cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trick",
                    "type": "Button",
                    "id": "4a0843a2-ac45-43d4-864e-48145287ad82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "77ce04c3-05d4-4442-85ac-28106642f705",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6025dbc6-3b12-45b0-b7a0-ba0f48e79970",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ece1f849-2c1c-4468-acc5-fc5d90f344ba",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LineChangeValue",
                    "id": "831f3ca4-f451-4ed8-beb6-c1ccd5a3a2d2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLine",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6a18a58b-c9c9-4139-8ee7-69cb48574729",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLine",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d456962c-4986-4008-8eae-63d88f0469b0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLine",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}